--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+- name: 'gcr.io/cloud-builders/git'
+  args: ['clone', 'https://github.com/demon-o5/gcp_project_1.git', '/workspace']
 - name: 'gcr.io/cloud-builders/gsutil'
   args: ['rsync', '-r', '.', 'gs://us-central1-composer-latest-d7e51211-bucket/dags']
 options:
